--- a/inbyte-component-admin/pom.xml
+++ b/inbyte-component-admin/pom.xml
@@ -16,6 +16,7 @@
 		<module>inbyte-component-admin-dict</module>
 		<module>inbyte-component-admin-aliyun-oss</module>
 		<module>inbyte-component-admin-system-user</module>
+		<module>inbyte-component-admin-system-basic</module>
 		<module>inbyte-component-admin-logging</module>
 		<module>inbyte-component-admin-marketing</module>
 	</modules>
