--- a/inbyte-component-app/pom.xml
+++ b/inbyte-component-app/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>inbyte-component-app-aliyun-oss</module>
         <module>inbyte-component-app-user</module>
+        <module>inbyte-component-app-basic</module>
         <module>inbyte-component-app-user-wallet</module>
         <module>inbyte-component-app-user-weixin-mp</module>
         <module>inbyte-component-app-payment-weixin</module>
