--- a/inbyte-component-app/inbyte-component-app-aliyun-oss/pom.xml
+++ b/inbyte-component-app/inbyte-component-app-aliyun-oss/pom.xml
@@ -60,7 +60,13 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.inbyte</groupId>
+            <artifactId>inbyte-component-app-basic</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
