--- a/inbyte-component-common/pom.xml
+++ b/inbyte-component-common/pom.xml
@@ -12,6 +12,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
+		<module>inbyte-component-common-basic</module>
 		<module>inbyte-component-common-dict</module>
 		<module>inbyte-component-common-district</module>
 		<module>inbyte-component-common-weixin-enterprise</module>
