--- a/inbyte-component-common/inbyte-component-common-basic/pom.xml
+++ b/inbyte-component-common/inbyte-component-common-basic/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
     <parent>
 		<groupId>com.inbyte</groupId>
-		<artifactId>inbyte-component-app</artifactId>
+		<artifactId>inbyte-component-common</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>inbyte-component-common-basic</artifactId>
