--- a/inbyte-component-app/inbyte-component-app-user/pom.xml
+++ b/inbyte-component-app/inbyte-component-app-user/pom.xml
@@ -17,6 +17,7 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-commons</artifactId>
+			<version>1.0.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.inbyte</groupId>
