--- a/inbyte-component-common/inbyte-component-common-weixin-robot/pom.xml
+++ b/inbyte-component-common/inbyte-component-common-weixin-robot/pom.xml
@@ -15,31 +15,18 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.inbyte</groupId>
-			<artifactId>inbyte-commons</artifactId>
-			<version>1.0.3-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>com.baomidou</groupId>
-			<artifactId>mybatis-plus-boot-starter</artifactId>
-			<version>3.5.5</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.fastjson2</groupId>
-			<artifactId>fastjson2</artifactId>
-			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
