--- a/inbyte-component-app/inbyte-component-app-user-weixin-mp/pom.xml
+++ b/inbyte-component-app/inbyte-component-app-user-weixin-mp/pom.xml
@@ -67,7 +67,13 @@
 			<artifactId>wechatpay-java</artifactId>
 			<version>0.2.4</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.inbyte</groupId>
+            <artifactId>inbyte-component-app-sign</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<finalName>${project.artifactId}</finalName>
