--- a/inbyte-component-common/inbyte-component-common-weixin-robot/pom.xml
+++ b/inbyte-component-common/inbyte-component-common-weixin-robot/pom.xml
@@ -15,6 +15,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.inbyte</groupId>
+			<artifactId>inbyte-commons</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<scope>provided</scope>
