--- a/inbyte-component/inbyte-component-app/inbyte-component-app-aliyun-oss/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-aliyun-oss/pom.xml
@@ -29,6 +29,11 @@
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>com.inbyte</groupId>
+			<artifactId>inbyte-component-app-sign</artifactId>
+			<version>1.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>com.aliyun.oss</groupId>
 			<artifactId>aliyun-sdk-oss</artifactId>
 			<version>3.10.2</version>
