--- a/inbyte-component/inbyte-component-common/inbyte-component-common-district/pom.xml
+++ b/inbyte-component/inbyte-component-common/inbyte-component-common-district/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.inbyte</groupId>
             <artifactId>inbyte-commons</artifactId>
-            <version>1.0.3-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
