--- a/inbyte-component/inbyte-component-common/inbyte-component-common-weixin-robot/pom.xml
+++ b/inbyte-component/inbyte-component-common/inbyte-component-common-weixin-robot/pom.xml
@@ -17,6 +17,7 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-commons</artifactId>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
