--- a/inbyte-component/inbyte-component-admin/inbyte-component-admin-user/pom.xml
+++ b/inbyte-component/inbyte-component-admin/inbyte-component-admin-user/pom.xml
@@ -45,6 +45,12 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.inbyte</groupId>
+            <artifactId>inbyte-component-common-dict</artifactId>
+            <version>1.0.2-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
