--- a/inbyte-component/inbyte-component-admin/inbyte-component-admin-aliyun-oss/pom.xml
+++ b/inbyte-component/inbyte-component-admin/inbyte-component-admin-aliyun-oss/pom.xml
@@ -6,11 +6,11 @@
     <parent>
 		<groupId>com.inbyte</groupId>
 		<artifactId>inbyte-component-admin</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.1.0-RELEASE</version>
 	</parent>
 	<artifactId>inbyte-component-admin-aliyun-oss</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.1.0-RELEASE</version>
 	<name>${project.artifactId}</name>
 
 	<dependencies>
@@ -22,13 +22,13 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-admin-system-user</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.1.0-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-common-dict</artifactId>
 			<scope>compile</scope>
-			<version>1.0.2-SNAPSHOT</version>
+			<version>1.1.0-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aliyun.oss</groupId>
