--- a/inbyte-component/inbyte-component-admin/inbyte-component-admin-user/pom.xml
+++ b/inbyte-component/inbyte-component-admin/inbyte-component-admin-user/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <artifactId>inbyte-component-admin</artifactId>
         <groupId>com.inbyte</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.1.0-RELEASE</version>
     </parent>
     <artifactId>inbyte-component-admin-user</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.1.0-RELEASE</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.inbyte</groupId>
             <artifactId>inbyte-component-admin-system-user</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.1.0-RELEASE</version>
         </dependency>
 
         <dependency>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>com.inbyte</groupId>
             <artifactId>inbyte-component-common-dict</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.1.0-RELEASE</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
