--- a/inbyte-component/inbyte-component-app/inbyte-component-app-marketing-ambassador/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-marketing-ambassador/pom.xml
@@ -6,11 +6,11 @@
     <parent>
 		<groupId>com.inbyte</groupId>
 		<artifactId>inbyte-component-app</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.1.0-RELEASE</version>
 	</parent>
 	<artifactId>inbyte-component-app-marketing-ambassador</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.1.0-RELEASE</version>
 	<name>${project.artifactId}</name>
 
 	<dependencies>
@@ -22,17 +22,17 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-app-user</artifactId>
-			<version>1.0.2-SNAPSHOT</version>
+			<version>1.1.0-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-app-sign</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.1.0-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-app-order</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.1.0-RELEASE</version>
 		</dependency>
 
 		<dependency>
