--- a/inbyte-component/inbyte-component-app/inbyte-component-app-payment/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-payment/pom.xml
@@ -6,11 +6,11 @@
     <parent>
 		<groupId>com.inbyte</groupId>
 		<artifactId>inbyte-component-app</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.1.0-RELEASE</version>
 	</parent>
 	<artifactId>inbyte-component-app-payment</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.1.0-RELEASE</version>
 	<name>${project.artifactId}</name>
 
 	<dependencies>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-common-weixin-enterprise</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.1.0-RELEASE</version>
 		</dependency>
 		<!--微信支付SDK-->
 		<dependency>
