--- a/inbyte-component/inbyte-component-common/inbyte-component-common-dict/pom.xml
+++ b/inbyte-component/inbyte-component-common/inbyte-component-common-dict/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <artifactId>inbyte-component-common</artifactId>
         <groupId>com.inbyte</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.1.0-RELEASE</version>
     </parent>
     <artifactId>inbyte-component-common-dict</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.1.0-RELEASE</version>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 
