--- a/inbyte-component/inbyte-component-common/inbyte-component-common-district/pom.xml
+++ b/inbyte-component/inbyte-component-common/inbyte-component-common-district/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.inbyte</groupId>
         <artifactId>inbyte-component-common</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.1.0-RELEASE</version>
     </parent>
     <artifactId>inbyte-component-common-district</artifactId>
     <packaging>jar</packaging>
+    <version>1.1.0-RELEASE</version>
     <name>${project.artifactId}</name>
-    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
