--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.inbyte</groupId>
     <artifactId>inbyte-project</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.0-RELEASE</version>
     <name>${project.artifactId}</name>
     <packaging>pom</packaging>
 
@@ -25,7 +25,7 @@
             <dependency>
                 <groupId>com.inbyte</groupId>
                 <artifactId>inbyte-commons</artifactId>
-                <version>1.0.4-SNAPSHOT</version>
+                <version>1.1.0-RELEASE</version>
             </dependency>
 
             <!-- Spring -->
