--- a/inbyte-component/inbyte-component-common/inbyte-component-common-district/pom.xml
+++ b/inbyte-component/inbyte-component-common/inbyte-component-common-district/pom.xml
@@ -9,7 +9,8 @@
     </parent>
     <artifactId>inbyte-component-common-district</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.0-RELEASE</version>
+<!--    <version>1.1.0-RELEASE</version>-->
+    <version>1.1.1-SNAPSHOT</version>
     <name>${project.artifactId}</name>
 
     <dependencies>
