--- a/inbyte-component/inbyte-component-admin/inbyte-component-admin-marketing/pom.xml
+++ b/inbyte-component/inbyte-component-admin/inbyte-component-admin-marketing/pom.xml
@@ -8,7 +8,8 @@
         <version>1.1.0-RELEASE</version>
     </parent>
     <artifactId>inbyte-component-admin-marketing</artifactId>
-    <version>1.1.0-RELEASE</version>
+<!--    <version>1.1.0-RELEASE</version>-->
+    <version>1.1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -26,6 +27,16 @@
             <groupId>com.inbyte</groupId>
             <artifactId>inbyte-util-weixin-mp</artifactId>
             <version>1.1.0-RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.inbyte</groupId>
+            <artifactId>inbyte-component-common-dict</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.inbyte</groupId>
+            <artifactId>inbyte-component-common-basic</artifactId>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
