--- a/inbyte-component/inbyte-component-admin/inbyte-component-admin-system-basic/pom.xml
+++ b/inbyte-component/inbyte-component-admin/inbyte-component-admin-system-basic/pom.xml
@@ -24,6 +24,11 @@
             <version>1.1.0-RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>com.inbyte</groupId>
+            <artifactId>inbyte-component-common-basic</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
