--- a/inbyte-component/inbyte-component-app/inbyte-component-app-sign/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-sign/pom.xml
@@ -20,6 +20,11 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.inbyte</groupId>
+			<artifactId>inbyte-component-common-basic</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<scope>provided</scope>
