--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,18 @@
                 <artifactId>inbyte-commons</artifactId>
                 <version>1.1.0-RELEASE</version>
             </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-common-basic</artifactId>
+                <version>1.1.1-SNAPSHOT</version>
+            </dependency>
 
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-common-dict</artifactId>
+                <scope>compile</scope>
+                <version>1.1.1-SNAPSHOT</version>
+            </dependency>
             <!-- Spring -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
