--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
             <dependency>
                 <groupId>com.inbyte</groupId>
                 <artifactId>inbyte-commons</artifactId>
-                <version>1.1.0-RELEASE</version>
+                <version>1.1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.inbyte</groupId>
