--- a/inbyte-component/inbyte-component-app/inbyte-component-app-user-weixin-mp/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-user-weixin-mp/pom.xml
@@ -10,7 +10,8 @@
 	</parent>
 	<artifactId>inbyte-component-app-user-weixin-mp</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.0-RELEASE</version>
+<!--	<version>1.1.0-RELEASE</version>-->
+	<version>1.1.1-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 
 	<dependencies>
