--- a/inbyte-component/inbyte-component-admin/inbyte-component-admin-user/pom.xml
+++ b/inbyte-component/inbyte-component-admin/inbyte-component-admin-user/pom.xml
@@ -8,7 +8,7 @@
         <version>1.1.0-RELEASE</version>
     </parent>
     <artifactId>inbyte-component-admin-user</artifactId>
-    <version>1.1.0-RELEASE</version>
+    <version>1.1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.inbyte</groupId>
             <artifactId>inbyte-component-admin-system-user</artifactId>
-            <version>1.1.0-RELEASE</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
