--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
                 <artifactId>inbyte-component-common-basic</artifactId>
                 <version>1.1.1-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-admin-system-user</artifactId>
+                <version>1.1.1-SNAPSHOT</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.inbyte</groupId>
