--- a/inbyte-component/inbyte-component-app/inbyte-component-app-user-weixin-mp/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-user-weixin-mp/pom.xml
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-app-user</artifactId>
-			<version>1.1.0-RELEASE</version>
+			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.inbyte</groupId>
