--- a/inbyte-component/inbyte-component-app/inbyte-component-app-order/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-order/pom.xml
@@ -31,8 +31,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.inbyte</groupId>
-			<artifactId>inbyte-component-app-payment</artifactId>
-			<version>1.1.0-RELEASE</version>
+			<artifactId>inbyte-component-common-payment</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
