--- a/inbyte-component/inbyte-component-app/inbyte-component-app-marketing-ambassador/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-marketing-ambassador/pom.xml
@@ -23,16 +23,19 @@
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-app-user</artifactId>
 			<version>1.1.0-RELEASE</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-app-sign</artifactId>
 			<version>1.1.0-RELEASE</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-app-order</artifactId>
 			<version>1.1.0-RELEASE</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
