--- a/inbyte-component/inbyte-component-app/inbyte-component-app-user-weixin-mp/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-user-weixin-mp/pom.xml
@@ -34,6 +34,7 @@
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-app-sign</artifactId>
 			<version>1.1.0-RELEASE</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
