--- a/inbyte-commons/pom.xml
+++ b/inbyte-commons/pom.xml
@@ -6,11 +6,10 @@
     <parent>
 		<groupId>com.inbyte</groupId>
 		<artifactId>inbyte-project</artifactId>
-		<version>1.1.0-RELEASE</version>
+		<version>1.1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>inbyte-commons</artifactId>
 	<packaging>jar</packaging>
-<!--	<version>1.1.0-RELEASE</version>-->
 	<version>1.1.1-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 
