--- a/inbyte-component/inbyte-component-admin/inbyte-component-admin-marketing/pom.xml
+++ b/inbyte-component/inbyte-component-admin/inbyte-component-admin-marketing/pom.xml
@@ -5,10 +5,9 @@
     <parent>
         <artifactId>inbyte-component-admin</artifactId>
         <groupId>com.inbyte</groupId>
-        <version>1.1.0-RELEASE</version>
+        <version>1.1.1-SNAPSHOT</version>
     </parent>
     <artifactId>inbyte-component-admin-marketing</artifactId>
-<!--    <version>1.1.0-RELEASE</version>-->
     <version>1.1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -21,12 +20,12 @@
         <dependency>
             <groupId>com.inbyte</groupId>
             <artifactId>inbyte-component-admin-system-user</artifactId>
-            <version>1.1.0-RELEASE</version>
+            <version>1.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.inbyte</groupId>
             <artifactId>inbyte-util-weixin-mp</artifactId>
-            <version>1.1.0-RELEASE</version>
+            <version>1.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.inbyte</groupId>
@@ -55,7 +54,6 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.5.5</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
