--- a/inbyte-component/inbyte-component-admin/inbyte-component-admin-user/pom.xml
+++ b/inbyte-component/inbyte-component-admin/inbyte-component-admin-user/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>inbyte-component-admin</artifactId>
         <groupId>com.inbyte</groupId>
-        <version>1.1.0-RELEASE</version>
+        <version>1.1.1-SNAPSHOT</version>
     </parent>
     <artifactId>inbyte-component-admin-user</artifactId>
     <version>1.1.1-SNAPSHOT</version>
@@ -39,7 +39,6 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.5.5</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
