--- a/inbyte-component/inbyte-component-app/inbyte-component-app-user-weixin-mp/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-user-weixin-mp/pom.xml
@@ -6,11 +6,10 @@
     <parent>
 		<groupId>com.inbyte</groupId>
 		<artifactId>inbyte-component-app</artifactId>
-		<version>1.1.0-RELEASE</version>
+		<version>1.1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>inbyte-component-app-user-weixin-mp</artifactId>
 	<packaging>jar</packaging>
-<!--	<version>1.1.0-RELEASE</version>-->
 	<version>1.1.1-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 
@@ -23,7 +22,7 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-util-weixin-mp</artifactId>
-			<version>1.1.0-RELEASE</version>
+			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.inbyte</groupId>
@@ -33,7 +32,7 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-app-sign</artifactId>
-			<version>1.1.0-RELEASE</version>
+			<version>1.1.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -46,7 +45,6 @@
 		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus-boot-starter</artifactId>
-			<version>3.5.5</version>
 		</dependency>
 
 		<dependency>
