--- a/inbyte-component/inbyte-component-app/inbyte-component-app-user/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-user/pom.xml
@@ -6,7 +6,7 @@
     <parent>
 		<groupId>com.inbyte</groupId>
 		<artifactId>inbyte-component-app</artifactId>
-		<version>1.1.0-RELEASE</version>
+		<version>1.1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>inbyte-component-app-user</artifactId>
 	<packaging>jar</packaging>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-common-email</artifactId>
-			<version>1.1.0-RELEASE</version>
+			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
