--- a/inbyte-component/inbyte-component-common/inbyte-component-common-district/pom.xml
+++ b/inbyte-component/inbyte-component-common/inbyte-component-common-district/pom.xml
@@ -5,11 +5,10 @@
     <parent>
         <groupId>com.inbyte</groupId>
         <artifactId>inbyte-component-common</artifactId>
-        <version>1.1.0-RELEASE</version>
+        <version>1.1.1-SNAPSHOT</version>
     </parent>
     <artifactId>inbyte-component-common-district</artifactId>
     <packaging>jar</packaging>
-<!--    <version>1.1.0-RELEASE</version>-->
     <version>1.1.1-SNAPSHOT</version>
     <name>${project.artifactId}</name>
 
