--- a/inbyte-component/inbyte-component-common/inbyte-component-common-payment/pom.xml
+++ b/inbyte-component/inbyte-component-common/inbyte-component-common-payment/pom.xml
@@ -6,7 +6,7 @@
     <parent>
 		<groupId>com.inbyte</groupId>
 		<artifactId>inbyte-component-common</artifactId>
-		<version>1.1.0-RELEASE</version>
+		<version>1.1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>inbyte-component-common-payment</artifactId>
 	<packaging>jar</packaging>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-common-weixin-enterprise</artifactId>
-			<version>1.1.0-RELEASE</version>
+			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
 		<!--微信支付SDK-->
 		<dependency>
