--- a/inbyte-component/inbyte-component-common/inbyte-component-common-weixin-robot/pom.xml
+++ b/inbyte-component/inbyte-component-common/inbyte-component-common-weixin-robot/pom.xml
@@ -6,11 +6,11 @@
     <parent>
 		<groupId>com.inbyte</groupId>
 		<artifactId>inbyte-component-common</artifactId>
-		<version>1.1.0-RELEASE</version>
+		<version>1.1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>inbyte-component-common-weixin-robot</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.0-RELEASE</version>
+	<version>1.1.1-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 
 	<dependencies>
