--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.inbyte</groupId>
     <artifactId>inbyte-project</artifactId>
-    <version>1.1.0-RELEASE</version>
+    <version>1.1.1-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <packaging>pom</packaging>
 
@@ -75,7 +75,7 @@
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
-                <version>3.5.7</version>
+                <version>3.5.5</version>
             </dependency>
 <!--            <dependency>-->
 <!--                <groupId>org.mybatis</groupId>-->
@@ -112,11 +112,11 @@
                 <version>22.0</version>
             </dependency>
 
-            <dependency>
-                <groupId>javax.validation</groupId>
-                <artifactId>validation-api</artifactId>
-                <version>2.0.1.Final</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>javax.validation</groupId>-->
+<!--                <artifactId>validation-api</artifactId>-->
+<!--                <version>2.0.1.Final</version>-->
+<!--            </dependency>-->
         </dependencies>
 
     </dependencyManagement>
