--- a/inbyte-component/inbyte-component-admin/inbyte-component-admin-marketing/pom.xml
+++ b/inbyte-component/inbyte-component-admin/inbyte-component-admin-marketing/pom.xml
@@ -8,7 +8,7 @@
         <version>1.1.1-SNAPSHOT</version>
     </parent>
     <artifactId>inbyte-component-admin-marketing</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1-RELEASE</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -20,12 +20,10 @@
         <dependency>
             <groupId>com.inbyte</groupId>
             <artifactId>inbyte-component-admin-system-user</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.inbyte</groupId>
             <artifactId>inbyte-util-weixin-mp</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.inbyte</groupId>
