--- a/inbyte-component/inbyte-component-admin/inbyte-component-admin-system-user/pom.xml
+++ b/inbyte-component/inbyte-component-admin/inbyte-component-admin-system-user/pom.xml
@@ -8,7 +8,7 @@
         <version>1.1.1-SNAPSHOT</version>
     </parent>
     <artifactId>inbyte-component-admin-system-user</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1-RELEASE</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -20,13 +20,17 @@
         <dependency>
             <groupId>com.inbyte</groupId>
             <artifactId>inbyte-util-weixin-mp</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.inbyte</groupId>
             <artifactId>inbyte-component-common-weixin-enterprise</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.inbyte</groupId>
+            <artifactId>inbyte-component-common-basic</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
@@ -73,11 +77,6 @@
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.inbyte</groupId>
-            <artifactId>inbyte-component-common-basic</artifactId>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
