--- a/inbyte-component/inbyte-component-app/inbyte-component-app-aliyun-oss/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-aliyun-oss/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<artifactId>inbyte-component-app-aliyun-oss</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.1-RELEASE</version>
 	<name>${project.artifactId}</name>
 
 	<dependencies>
@@ -22,7 +22,6 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-app-user</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -33,7 +32,6 @@
 		<dependency>
 			<groupId>com.inbyte</groupId>
 			<artifactId>inbyte-component-app-sign</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -60,7 +58,6 @@
 		<dependency>
 			<groupId>com.alibaba.fastjson2</groupId>
 			<artifactId>fastjson2</artifactId>
-			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
