--- a/inbyte-component/inbyte-component-app/inbyte-component-app-sign/pom.xml
+++ b/inbyte-component/inbyte-component-app/inbyte-component-app-sign/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>inbyte-component-app-sign</artifactId>
 	<packaging>jar</packaging>
 <!--	<version>1.1.1-SNAPSHOT</version>-->
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.1-RELEASE</version>
 	<name>${project.artifactId}</name>
 
 	<dependencies>
@@ -49,7 +49,6 @@
 		<dependency>
 			<groupId>com.alibaba.fastjson2</groupId>
 			<artifactId>fastjson2</artifactId>
-			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
