--- a/inbyte-component/inbyte-component-common/inbyte-component-common-basic/pom.xml
+++ b/inbyte-component/inbyte-component-common/inbyte-component-common-basic/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<artifactId>inbyte-component-common-basic</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.1-RELEASE</version>
 	<name>${project.artifactId}</name>
 
 	<dependencies>
