--- a/inbyte-component/inbyte-component-common/inbyte-component-common-dict/pom.xml
+++ b/inbyte-component/inbyte-component-common/inbyte-component-common-dict/pom.xml
@@ -9,7 +9,7 @@
         <version>1.1.1-SNAPSHOT</version>
     </parent>
     <artifactId>inbyte-component-common-dict</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1-RELEASE</version>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 
