--- a/inbyte-component/inbyte-component-common/inbyte-component-common-email/pom.xml
+++ b/inbyte-component/inbyte-component-common/inbyte-component-common-email/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <artifactId>inbyte-component-common-email</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1-RELEASE</version>
     <name>${project.artifactId}</name>
 
     <dependencies>
