--- a/inbyte-util/inbyte-util-itext/pom.xml
+++ b/inbyte-util/inbyte-util-itext/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<artifactId>inbyte-util-itext</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.1-RELEASE</version>
 	<name>${project.artifactId}</name>
 	<properties>
 		<itext.version>7.1.11</itext.version>
@@ -20,7 +20,6 @@
 		<dependency>
 			<groupId>com.alibaba.fastjson2</groupId>
 			<artifactId>fastjson2</artifactId>
-			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
