--- a/pom.xml
+++ b/pom.xml
@@ -27,23 +27,124 @@
                 <artifactId>inbyte-commons</artifactId>
                 <version>1.1.1-SNAPSHOT</version>
             </dependency>
+
+            <!-- 工具项目依赖开始 -->
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-util-itext</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-util-weixin-mp</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <!-- 工具项目依赖结束 -->
+
+            <!-- 公共项目依赖开始 -->
             <dependency>
                 <groupId>com.inbyte</groupId>
                 <artifactId>inbyte-component-common-basic</artifactId>
-                <version>1.1.1-SNAPSHOT</version>
+                <version>1.1.1-RELEASE</version>
             </dependency>
-            <dependency>
-                <groupId>com.inbyte</groupId>
-                <artifactId>inbyte-component-admin-system-user</artifactId>
-                <version>1.1.1-SNAPSHOT</version>
-            </dependency>
-
             <dependency>
                 <groupId>com.inbyte</groupId>
                 <artifactId>inbyte-component-common-dict</artifactId>
-                <scope>compile</scope>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-common-district</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-common-email</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-common-weixin-enterprise</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-common-weixin-open</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-common-weixin-robot</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-common-payment</artifactId>
                 <version>1.1.1-SNAPSHOT</version>
             </dependency>
+            <!-- 公共项目依赖结束 -->
+
+            <!-- 后台项目依赖开始 -->
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-admin-system-user</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-admin-aliyun-oss</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-admin-marketing</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-admin-system-basic</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-admin-user</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <!-- 后台项目依赖结束 -->
+
+            <!-- App项目依赖开始 -->
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-app-aliyun-oss</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-app-marketing-ambassador</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-app-order</artifactId>
+                <version>1.1.2-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-app-sign</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-app-user</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.inbyte</groupId>
+                <artifactId>inbyte-component-app-user-weixin-mp</artifactId>
+                <version>1.1.1-RELEASE</version>
+            </dependency>
+            <!-- App项目依赖结束 -->
+
             <!-- Spring -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
